ui/tui/src/render/snapshots/hub_tui__render__tests__split_view_task_in_review_no_comments.snap
---
source: ui/tui/src/render/mod.rs
expression: screen_text(&buf)
---
╭ All ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│Agent · TASK-0001 · Implement feature X in-review · implement                                                      now│
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭───────────────────────────────────────────────────────────────────────┬──────────────────────────────────────────────╮
│No session data yet.                                                   │ TASK-0001 · Implement feature X              │
│                                                                       │                                              │
│                                                                       │ status  in-review                            │
│                                                                       │ kind    implement                            │
│                                                                       │                                              │
│                                                                       │ created                                      │
│                                                                       │ updated                                      │
│                                                                       │ age     now                                  │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
╰───────────────────────────────────────────────────────────────────────┴──────────────────────────────────────────────╯
 1/1 · [s] status · [Esc] back
