ui/tui/src/render/snapshots/hub_tui__render__tests__split_view_task_in_review_with_comments.snap
---
source: ui/tui/src/render/mod.rs
expression: screen_text(&buf)
---
╭ All ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│Agent · TASK-0001 · Fix auth bug in-review · implement                                                             now│
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭───────────────────────────────────────────────────────────────────────┬──────────────────────────────────────────────╮
│No session data yet.                                                   │ TASK-0001 · Fix auth bug                     │
│                                                                       │                                              │
│                                                                       │ OAuth token refresh was not wired            │
│                                                                       │ in the middleware.                           │
│                                                                       │                                              │
│                                                                       │ status  in-review                            │
│                                                                       │ kind    implement                            │
│                                                                       │                                              │
│                                                                       │ created 2026-06-04 10:00                     │
│                                                                       │ updated 2026-06-04 11:00                     │
│                                                                       │ age     now                                  │
│                                                                       │                                              │
│                                                                       │ https://github.com/org/hub/pull/42           │
│                                                                       │                                              │
│                                                                       │ ── comments ──────────────────────           │
│                                                                       │                                              │
│                                                                       │ 2026-06-04 10:30  agent                      │
│                                                                       │ Found the issue in auth.rs.                  │
│                                                                       │                                              │
│                                                                       │ 2026-06-04 11:00  agent                      │
│                                                                       │ Fixed. Token refresh wired in middleware.    │
│                                                                       │ All tests pass.                              │
│                                                                       │                                              │
│                                                                       │                                              │
╰───────────────────────────────────────────────────────────────────────┴──────────────────────────────────────────────╯
 1/1 · [s] status · [Esc] back
