ui/tui/src/render/snapshots/hub_tui__render__tests__status_bar_in_issue_detail.snap
---
source: ui/tui/src/render/mod.rs
expression: status_row(&buf)
---
  [a] approve · [o] open · [Esc] back
