ui/tui/src/render/snapshots/hub_tui__render__tests__status_bar_in_merging_pr.snap
---
source: ui/tui/src/render/mod.rs
expression: status_row(&buf)
---
 Squash and merge #102 into main?  [↩] confirm · [Esc] cancel
