ui/tui/src/render/snapshots/hub_tui__render__tests__status_bar_in_pr_detail.snap
---
source: ui/tui/src/render/mod.rs
expression: status_row(&buf)
---
  [↩] open · [i] investigate · [o] octo · [l] lazygit · [v] review · [m] merge · [Esc] back
