ui/tui/src/render/snapshots/hub_tui__render__tests__status_bar_left_group_then_single_item.snap
---
source: ui/tui/src/render/mod.rs
expression: status_row(&buf)
---
 1/1 · [↩] details · [n/N] new task · [p] prs · [O] issues · [e] errors · [/] search · [i] investigate
