ui/tui/src/render/snapshots/hub_tui__render__tests__status_bar_left_single_item_then_empty.snap
---
source: ui/tui/src/render/mod.rs
expression: status_row(&buf)
---
  · [↩] details · [p] prs · [O] issues · [e] errors · [/] search
