ui/tui/src/render/snapshots/hub_tui__render__tests__status_bar_pending_pr_action_shows_submenu.snap
---
source: ui/tui/src/render/mod.rs
expression: status_row(&buf)
---
  [d] delta · [l] lazygit · [o] octo · [Esc] cancel
