ui/tui/src/render/snapshots/hub_tui__render__tests__status_bar_review_picker_on_a_peer_pr_offers_only_code.snap
---
source: ui/tui/src/render/mod.rs
expression: status_row(&buf)
---
 Review #1  [c] code · [Esc] cancel
